--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
+			<artifactId>spring-context</artifactId>
 			<version>5.1.6.RELEASE</version>
 		</dependency>
 
